--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
     <!-- fonts-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Alumni+Sans+Inline+One&family=Lobster&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Alumni+Sans+Inline+One&family=Lobster&family=Nunito&display=swap" rel="stylesheet">
     <!-- fonts-->
     <!--
       manifest.json provides metadata used when your web app is installed on a
